# mimir

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: architecture.md  cert-eu-cti-framework-draft.md  datalake-indexes-taxonomy.md
scripts/: run_mcp.sh
src/mimir/: backfill.py  config.py  export.py  lake.py  schemas.py
src/mimir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mimir/api/: access.py  app.py  ask_retrieval.py  routes.py  ui.py  visualize.py
src/wellspring/: __init__.py  backfill.py  config.py  dedupe.py  export.py  schemas.py
src/wellspring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: in_memory_graph_store.py  test_aikg_import.py  test_api_access_controls.py  test_chunking.py  test_config_and_schema_validation.py  test_connectors_shared.py  test_cooccurrence.py  test_dedupe.py  test_elastic_source_sync.py  test_elastic_store_search.py  test_graph_limits.py  test_graph_traversal.py  test_gvm_connector.py  test_inference.py  test_lake_metadata.py  test_lake_overview.py  test_malware_sync.py  test_mcp_server.py  test_multi_search.py  test_normalization.py  test_opencti_location_ingest.py  test_parse.py  test_provenance_timestamp.py  test_relation_merge.py  test_routes_helpers.py  test_routes_worker_status.py  test_rss_sync.py  test_utils_datetime.py  test_utils_provenance.py  test_utils_text.py  test_watcher_connector.py  test_worker_base.py  test_worker_heartbeat.py
tests/ui/: test_ui_responsive.py
(+99 files in other folders)
