[project]
name = "mimir"
version = "0.1.0"
description = "LLM-Native Knowledge Graph (KG) Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.6",
  "pymupdf>=1.24",
  "elasticsearch>=8.13",
  "mcp[cli]>=1.0",
]

[project.scripts]
mimir-mcp = "mimir.mcp.server:main"
mimir-malware-worker = "mimir.worker.malware_worker:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
